# Damping_wings

./: .gitignore  Calculating_M_pixels.py  Calculating_skewers_git.py  Constants.py  Corner_models.py  Damping_wings_git.py  Dockerfile  Face_models.py  Generating_ionized_boxes_git.py  LICENSE  Makefile  Middle_model.py  Parameters_file.py  Plotting_wings.py  README.md  Running_models_non_parallel_git.py  calculating_m_pixels.py  calculating_skewers.py  calculating_skewers_git.py  constants.py  damping_wings.py  damping_wings_git.py  environment.yml  generating_ionized_boxes_git.py  ionized_boxes.py  m_pixels.py  modelling.py  optimized_code_running_models.py  parameters_file.py  pyproject.toml  running_models_non_parallel_git.py
.github/workflows/: ci.yml
examples/: example_model.py  modelling.py
src/: fisher_matrix.py
src/damping_wings/: __init__.py  calculating_skewers.py  damping_wings.py  fisher_matrix.py  ionized_boxes.py  m_pixels.py  modelling_class.py  utils.py
src/damping_wings/config/: __init__.py  constants.py  parameters_file.py
tests/: test_config.py  test_modelling_class.py
tests/integration/: conftest.py  test_pipeline.py
tests/unit/: test_damping_wings.py  test_fisher_matrix.py  test_utils.py  test_utils_setup.py
