[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name = "damping-wings"
version = "0.1.0"
description = "A general OOP pipeline for parametric semi-numerical simulation and Fisher Information Matrix-based parameter inference"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yash Mohan Sharma", email = "yashmohansharma96@gmail.com" }
]
keywords = [
    "cosmology",
    "reionization",
    "simulation",
    "inference",
    "fisher-matrix",
    "damping-wings",
    "21cmfast",
    "probabilistic-ml",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.9"

# ── Runtime dependencies ──────────────────────────────────────────────────────
# Note: py21cmfast and hmf require conda for C extensions.
# Install via environment.yml first, then pip install -e .
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "astropy>=5.3",
    "h5py>=3.8",
    "numba>=0.57",
    "ordered-set>=4.1",
    "tabulate>=0.9",
    "tqdm>=4.65",
    "corner>=2.2", 
]

# ── Optional dependencies ─────────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "ruff>=0.1",
]

# ── Project URLs ──────────────────────────────────────────────────────────────
[project.urls]
Repository = "https://github.com/YashMohan/Damping_wings"
"Bug Tracker" = "https://github.com/YashMohan/Damping_wings/issues"

# ── Build configuration ───────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/damping_wings"]

# ── pytest configuration ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring 21cmFAST simulation (run with: pytest tests/integration/ -v)",
]
addopts = "-v --tb=short"

# ── mypy configuration ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true   # needed for py21cmfast, hmf which have no stubs

# ── ruff configuration (linting) ─────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in default arguments
]
exclude = [
    "examples/",   # example scripts are less strict
    "tests/",      # tests are less strict
]